tests/testdata/nonmem/errors/hessian.ext
TABLE NO.     1: First Order Conditional Estimation with Interaction: Goal Function=MINIMUM VALUE OF OBJECTIVE FUNCTION: Problem=1 Subproblem=0 Superproblem1=0 Iteration1=0 Superproblem2=0 Iteration2=0
 ITERATION    SIGMA(1,1)   OMEGA(1,1)   OMEGA(2,1)   OMEGA(2,2)   OMEGA(3,1)   OMEGA(3,2)   OMEGA(3,3)   OBJ
            0  5.93028E-02  2.78673E-01  7.82277E-03  1.00000E-02  8.73905E-03  1.10439E-04  1.00000E-02    788.37385578726230
  -1000000000  6.67702E-02  1.99543E-01  1.47130E-01  4.34605E+00  2.00854E-01  1.45787E-01  2.15757E-01    779.38748742869075
  -1000000006  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00    0.0000000000000000
  -1000000007  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00  0.00000E+00    0.0000000000000000
